--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,22 @@
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
-                android:theme="@style/AppTheme.NoActionBar"
-                android:name=".ForgotPasswordActivity">
+                android:name=".ForgotPasswordActivity"
+                android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-                android:theme="@style/AppTheme.NoActionBar"
-                android:name=".RegisterActivity">
+                android:name=".RegisterActivity"
+                android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+                android:name=".HomeActivity"
+                android:label="@string/title_activity_home"
+                android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
