--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/ic_kasus"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:roundIcon="@mipmap/ic_kasus_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
@@ -31,6 +31,10 @@
                 android:name=".HomeActivity"
                 android:label="@string/title_activity_home"
                 android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity android:name=".KasusFormActivity">
+        </activity>
+        <activity android:name=".KasusListActivity">
         </activity>
     </application>
 
